AirQ+ lifetable approach runs until sex-specific results are compiled in "get_deaths_yll_yld"
Next step: create sex-specific results for AirQ+ approach, so that function "attribute_..._airqplus" runs until the end without errors

--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -490,42 +490,42 @@ check_bestcost(result_list_bestcost = bestcost_pm_deaths_lifetable_geluft ,
 # Calculate years of life lost using bestcost function
 # and input data from an AirQ+ case
 
-bestcost_pm_yll_lifetable_airqplus_org <-
-  bestcost::attribute_yll_from_lifetable(
-    exp_central = airqplus_pm_deaths_yll[["input"]]$mean_concentration, 
-    cutoff = airqplus_pm_deaths_yll[["input"]]$cut_off_value,
-    rr_central = airqplus_pm_deaths_yll[["input"]]$relative_risk,
-    rr_lower = airqplus_pm_deaths_yll[["input"]]$relative_risk_lower,
-    rr_upper = airqplus_pm_deaths_yll[["input"]]$relative_risk_upper,
-    erf_increment = 10, 
-    erf_shape = gsub("-", "_", airqplus_pm_deaths_yll[["input"]]$calculation_method),
-    first_age_pop = first(airqplus_pm_deaths_yll[["pop"]]$age_from...),
-    last_age_pop = last(airqplus_pm_deaths_yll[["pop"]]$age_from...),
-    prob_natural_death_male = prob_dying[["natural"]][["male"]]$prob_dying,
-    prob_natural_death_female = prob_dying[["natural"]][["female"]]$prob_dying,
-    prob_total_death_male = prob_dying[["total"]][["male"]]$prob_dying,
-    prob_total_death_female = prob_dying[["total"]][["female"]]$prob_dying,
-    population_midyear_male = airqplus_pm_deaths_yll[["pop"]]$midyear_population_male,
-    population_midyear_female = airqplus_pm_deaths_yll[["pop"]]$midyear_population_female, 
-    year_of_analysis =  airqplus_pm_deaths_yll[["input"]]$start_year, 
-    min_age = airqplus_pm_deaths_yll[["input"]]$apply_rr_from_age)
+# bestcost_pm_yll_lifetable_airqplus_org <-
+#   bestcost::attribute_yll_from_lifetable(
+#     exp_central = airqplus_pm_deaths_yll[["input"]]$mean_concentration, 
+#     cutoff = airqplus_pm_deaths_yll[["input"]]$cut_off_value,
+#     rr_central = airqplus_pm_deaths_yll[["input"]]$relative_risk,
+#     rr_lower = airqplus_pm_deaths_yll[["input"]]$relative_risk_lower,
+#     rr_upper = airqplus_pm_deaths_yll[["input"]]$relative_risk_upper,
+#     erf_increment = 10, 
+#     erf_shape = gsub("-", "_", airqplus_pm_deaths_yll[["input"]]$calculation_method),
+#     first_age_pop = first(airqplus_pm_deaths_yll[["pop"]]$age_from...),
+#     last_age_pop = last(airqplus_pm_deaths_yll[["pop"]]$age_from...),
+#     prob_natural_death_male = prob_dying[["natural"]][["male"]]$prob_dying,
+#     prob_natural_death_female = prob_dying[["natural"]][["female"]]$prob_dying,
+#     prob_total_death_male = prob_dying[["total"]][["male"]]$prob_dying,
+#     prob_total_death_female = prob_dying[["total"]][["female"]]$prob_dying,
+#     population_midyear_male = airqplus_pm_deaths_yll[["pop"]]$midyear_population_male,
+#     population_midyear_female = airqplus_pm_deaths_yll[["pop"]]$midyear_population_female, 
+#     year_of_analysis =  airqplus_pm_deaths_yll[["input"]]$start_year, 
+#     min_age = airqplus_pm_deaths_yll[["input"]]$apply_rr_from_age)
 
 # Check results
 # They are extremely different. The methodology of airq+ is very different to other studies
 # AirQ+ considers that the increase/decrease of exposure happens 100 years,
 # while other studies (e.g. GeLuft) look at the impact over 100 years of a one-year exposure.
 
-check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_airqplus,
-               result_vector_alternative = 
-                 c(airqplus_pm_deaths_yll[["output"]]$value_central_allgenders_yll_over_100_years_age_20_99,
-                   airqplus_pm_deaths_yll[["output"]]$value_lower_allgenders_yll_over_100_years_age_20_99,
-                   airqplus_pm_deaths_yll[["output"]]$value_upper_allgenders_yll_over_100_years_age_20_99))
+# check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_airqplus_org,
+#                result_vector_alternative = 
+#                  c(airqplus_pm_deaths_yll[["output"]]$value_central_allgenders_yll_over_100_years_age_20_99,
+#                    airqplus_pm_deaths_yll[["output"]]$value_lower_allgenders_yll_over_100_years_age_20_99,
+#                    airqplus_pm_deaths_yll[["output"]]$value_upper_allgenders_yll_over_100_years_age_20_99))
 
 # Calculate years of life lost using new bestcost function
 # and input data from an AirQ+ case
 
 # Now with input data from the Swiss project GeLuft
-bestcost_pm_yll_lifetable_geluft <- 
+system.time(bestcost_pm_yll_lifetable_geluft <- 
   bestcost::attribute_yll_from_lifetable(
     exp_central = input_data_mortality$exp[2], #exp CH 2019
     prop_pop_exp = 1,
@@ -546,14 +546,33 @@ bestcost_pm_yll_lifetable_geluft <-
     year_of_analysis = 2019, 
     corrected_discount_rate = 0,
     info = input_data_mortality$pollutant[2], 
-    min_age = if(is.na(input_data_mortality$min_age[2])) NULL else input_data_mortality$min_age[2])
+    min_age = if(is.na(input_data_mortality$min_age[2])) NULL else input_data_mortality$min_age[2]))
 
 check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_geluft,
                result_vector_alternative = c(27742, 14641, 40542))
 
 ```
 
+```{r probability of dying}
+prob_dying <- list()
+
+for(d in c("natural", "total")){
+  for(s in c("male", "female")){
+   prob_dying[[d]][[s]] <-
+     bestcost::get_prob_dying_by_single_age(
+      first_age_pop = first(airqplus_pm_deaths_yll[["pop"]]$age_from...),
+      last_age_pop = last(airqplus_pm_deaths_yll[["pop"]]$age_from...),
+      interval_age_pop = 
+        unique(airqplus_pm_deaths_yll[["pop"]]$age_from... - 
+                 airqplus_pm_deaths_yll[["pop"]]$age_from...) + 1,
+      population_midyear = unlist(airqplus_pm_deaths_yll[["pop"]][, paste0("midyear_population_", s)]),
+      deaths = unlist(airqplus_pm_deaths_yll[["pop"]][, paste0("number_of_deaths_", s)]))
+  }
+}
+```
+
 ```{r yll from lifetable airqplus approach}
+
 # Calculate years of life lost using bestcost function
 # and input data from an AirQ+ case
 
